<resources>
    <string name="app_name">Pigeon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="slide_to_cancel">slide to cancel</string>
    <string name="landing_enter_mobile_number">Enter your mobile number</string>
    <string name="landing_enter_mobile_hint">Mobile number</string>
    <string name="landing_validation_title">Enter the 4-digit code send to you at %1$s</string>
    <string name="landing_resend_code_enable">Resend Code</string>
    <string name="landing_resend_code_disable">Resend code in %1$d s</string>
    <string name="empty_info">You can chat with contacts who have Pigeon install on their phone</string>
    <string name="empty_start">Start Messaging</string>
    <string name="search_hint">Contacts and Chats</string>
    <string name="transfer">Transfer</string>
    <string name="voice">Voice</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="document">Document</string>
    <string name="contact">Contact</string>
    <string name="extensions">Extensions</string>
    <string name="group_cant_send">You can\\\'t send messages to this group because you\\\'re no longer a participant.</string>
    <string name="setting_unblock">Unblock</string>
    <string name="hold_to_record_audio">Press and hold to record audio</string>
    <string name="gallery_all">All Media</string>
    <string name="error_format">Format not supported</string>
    <string name="error_permission">Please open the necessary permission</string>
    <string name="error_no_camera">No Camera</string>
    <string name="gallery_empty_text">No media yet.</string>
    <string name="unread">%1$d new messages</string>
    <string name="week_monday">Monday</string>
    <string name="week_tuesday">Tuesday</string>
    <string name="week_wednesday">Wednesday</string>
    <string name="week_thursday">Thursday</string>
    <string name="week_friday">Friday</string>
    <string name="week_saturday">Saturday</string>
    <string name="week_sunday">Sunday</string>
    <string name="yesterday">Yesterday</string>
    <string name="chat_waiting">Waiting for %1$s to get online and establish an encrypted session. %2$s.</string>
    <string name="info">Messages to this conversation are encrypted end-to-end, tap for more info.</string>
    <string name="today">Today</string>
    <string name="contact_item_title">Contacts</string>
    <string name="search">Search</string>
    <string name="error_unable_to_open_media">Can\\\'t find an app able to open this media.</string>
    <string name="error_file_exists">File does not exist</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="sticker">Sticker</string>
    <string name="audio">Audio</string>
    <string name="default_time">00:00</string>
    <string name="save">Save</string>
    <string name="contact_sq_scan_title">Extract QR Code</string>
    <string name="save_success">Save success</string>
    <string name="save_failure">Save failer</string>
    <string name="user_bio_dummy"> Everyone start with Hello World C Cpp java Android python ML AI kotlin </string>
    <string name="error_no_connection">No network connection</string>
    <string name="error_connection_timeout">Network connection timeout</string>
    <string name="error_network">Network error</string>
    <string name="error_server_5xx">Server is under maintenance</string>
    <string name="error_unknown">Error</string>
    <string name="error_unknown_with_code">Error: %1$d</string>
    <string name="error_forbidden">Access denied</string>
    <string name="error_not_found">ERROR %1$d: Not found</string>
    <string name="error_too_many_request">ERROR %1$d: Rate limit exceeded</string>
    <string name="error_authentication">ERROR %1$d: Sign in to continue</string>
    <string name="error_something_wrong">Opps!! Something went wrong</string>
    <string name="conversation_waiting">Waiting for this message.</string>
    <string name="conversation_status_pic">Photo</string>
    <string name="conversation_status_video">Video</string>
    <string name="conversation_status_file">File</string>
    <string name="conversation_status_audio">Audio</string>
    <string name="contact_less_title">Contact</string>
    <string name="not_logged_in">Not loged in</string>
    <string name="error_share">Share error</string>
    <string name="share_file">Share</string>
    <string name="chat_item_title">CHAT</string>
    <string name="notification_message">Message Notification</string>
    <string name="notification_reply">Reply</string>
    <string name="alert_key_contact_text_message">send you a message</string>
    <string name="alert_key_contact_image_message">Send you a photo</string>
    <string name="alert_key_contact_video_message">Send you a video</string>
    <string name="alert_key_contact_data_message">Send a file</string>
    <string name="alert_key_contact_audio_message">Send a audio</string>
    <string name="alert_key_contact_contact_message">Send a contact</string>
    <string name="alert_key_contact_audio_call_message">Ask you a audio call</string>
    <string name="default_bio">Felling Happier</string>
    <string name="call_speaker">Speaker</string>
    <string name="call_mute">Mute</string>
    <string name="call_flip_camera">Flip Camera</string>
    <string name="call_hang_up">Hang Up</string>
    <string name="call_accept">Accept</string>
    <string name="call_decline">Decline</string>
    <string name="call_notification_incoming_voice">Incoming voice call</string>
    <string name="call_notification_incoming_video">Incoming video call</string>
    <string name="call_connecting">Connecting</string>
    <string name="conversation_pin">Pin to top</string>
    <string name="conversation_pin_clear">Clear pin</string>
    <string name="copy_success">Copy to clipboard</string>
    <string name="search_title_contacts">Contacts</string>
    <string name="search_title_messages">Messages</string>
    <string name="search_title_groups">Groups</string>
    <string name="chat_call_warning_call">You cannot place a Pigeon call if you\'re already on another call</string>
    <string name="call_notification_outgoing">Calling&#8230;</string>
    <string name="call_notification_missed_voice">Missed voice call</string>
    <string name="call_notification_connected">Ongoing voice call</string>
    <string name="call_notification_action_cancel">CANCEL</string>
    <string name="call_notification_action_decline">DECLINE</string>
    <string name="call_notification_action_answer">ANSWER</string>
    <string name="call_notification_action_callback">CALL BACK</string>
    <string name="call_notification_action_reply">REPLY</string>
    <string name="call_notification_action_hang_up">HANG UP</string>
    <string name="group_add">Add Participants</string>
    <string name="group_new_title">New Group</string>
    <string name="group_new_photo">Group Photo</string>
    <string name="group_new_name">Group Name</string>
    <string name="group_new_name_tip">New group name</string>
    <string name="group_new_notice">Group Notice</string>
    <string name="group_new_notice_tip">about</string>
    <string name="group_info_title">Group Info</string>
    <string name="group_info_not_in">You\'re no longer a participant in this group</string>
    <string name="group_info_clear_chat">Clear Chat</string>
    <string name="group_info_remove_member">Remove Participants</string>
    <string name="group_info_exit_group">Exit Group</string>
    <string name="group_info_delete_group">Delete Group</string>
    <string name="group_edit_title">Edit Group</string>
    <string name="group_edit_name">Edit Name</string>
    <string name="group_edit_too_long">Content too long</string>
    <string name="group_pop_menu_message">Message %1$s</string>
    <string name="group_pop_menu_view">View %1$s</string>
    <string name="group_pop_menu_remove">Remove %1$s</string>
    <string name="group_pop_menu_make_admin">Make group admin</string>
    <string name="group_info_remove_tip">Remove %1$s from \"%2$s\" group?</string>
    <string name="group_info_leave_tip">Are you sure you want to leave the group?</string>
    <string name="group_adding">Adding…</string>
    <string name="group_removing">Removing…</string>
    <string name="group_creating">Creating…</string>
    <string name="state_connecting">Connecting</string>
    <string name="state_syncing">Syncing messages</string>
    <string name="state_calling">Tap to return to call</string>
    <string name="group_join">Join the group</string>
    <string name="group_already_in">You already in the group</string>
    <string name="pb_dialog_message">Please wait a bit…</string>
    <string name="done">Done</string>
    <string name="create_new_group">Create New Group</string>
    <string name="select_members">Select memebers</string>
    <string name="group_members">Group members</string>
    <string name="admin">Admin</string>
    <string name="confirm">Confirm</string>
    <string name="clear_chat">Clear chat</string>
    <string name="dialog_clear_chat_title">Clear chat?</string>
    <string name="leave_group">Leave group</string>
    <string name="shared_media">Shared media</string>
    <string name="removing">Removing</string>
    <string name="leaving">Leaving</string>
    <string name="about_follow_twitter">Follow us on Twitter</string>
    <string name="about_follow_facebook">Follow us on Facebook</string>
    <string name="about_help_center">Help center</string>
    <string name="about_version">Version %1$s</string>
    <string name="conversation_delete">Delete</string>
    <string name="chat_group_create">%1$s created group \"%2$s\"</string>
    <string name="chat_group_add">%1$s added %2$s</string>
    <string name="chat_group_remove">%1$s removed %2$s</string>
    <string name="chat_group_exit">%1$s left</string>
    <string name="chat_group_join">%1$s joined using this group\'s invite link</string>
    <string name="chat_you_start">You</string>
    <string name="Photos">Photos</string>
    <string name="Videos">Videos</string>
    <string name="Files">Files</string>
    <string name="chat_backup">Backup chat</string>
    <string name="backup_title">Last Backup</string>
    <string name="backup_des">Back up your messages to external storage. You can restore them when you reinstall Pigeon. Messages you back up are not protected while in external storage.</string>
    <string name="backup_never">Never</string>
    <string name="backup">Backup</string>
    <string name="backup_delete">Backup delete</string>
    <string name="backup_dialog_title">Auto back up to external storage</string>
    <string name="backup_ing">External storage backup&#8230;</string>
    <string name="nobody">Nobody</string>
    <string name="contacts">Contacts</string>
    <string name="everybody">Everybody</string>
    <string name="see_your_last_seen">See your last seen</string>
    <string name="see_your_profile">See your profile</string>
    <string name="blocked_contacts">Blocked contacts</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="auto_download_media_mobile">Auto download media : MOBILE</string>
    <string name="auto_download_media_wifi">Auto download media : WIFI</string>
    <string name="images">Images</string>
    <string name="clear_all_chat">Clear all chat</string>
    <string name="delete_all_chat">Delete all chat</string>
    <string name="enter_key_is_send">Enter key is send</string>
    <string name="chat_setting">Chat setting</string>
    <string name="account_setting">Account setting</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcome_to_pigeon">Welcome to Pigeon</string>
    <string name="accept_terms_and_condition">Read our %s.Tap \"Get started\" to accept the %s.</string>
</resources>