<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/restore_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_backup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/backup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:text="@string/backup_title"
            android:textColor="@color/colorDarkBlue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/restore_icon"
            app:layout_constraintStart_toEndOf="@id/restore_icon"
            app:layout_constraintTop_toTopOf="@id/restore_icon" />

        <TextView
            android:id="@+id/backup_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/backup_title"
            app:layout_constraintTop_toBottomOf="@id/backup_title"
            tools:text="@string/backup_never" />

        <TextView
            android:id="@+id/backup_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/backup_info"
            app:layout_constraintTop_toBottomOf="@id/backup_info" />

        <TextView
            android:id="@+id/backup_des"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/backup_des"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/backup_title"
            app:layout_constraintTop_toBottomOf="@id/backup_size" />

        <LinearLayout
            android:id="@+id/backup_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:layout_marginBottom="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingStart="56dp"
            android:paddingEnd="56dp"
            app:layout_constraintTop_toBottomOf="@id/backup_des">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/backup_dialog_title"
                android:textColor="@color/text_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/backup_auto_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:textSize="14sp"
                tools:text="**@mixin.one" />

        </LinearLayout>

        <Button
            android:id="@+id/backup_bn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorDarkBlue"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/backup"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/backup_title"
            app:layout_constraintTop_toBottomOf="@id/backup_auto" />

        <Button
            android:id="@+id/delete_bn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/colorDarkBlue"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/backup_delete"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/backup_title"
            app:layout_constraintTop_toBottomOf="@id/backup_auto" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/progressGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="progressTv,progressBar" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/ProgressTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorDarkBlue"
            android:secondaryProgressTint="@color/colorDarkBlue"
            app:layout_constraintBottom_toTopOf="@id/progressTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/backup_title"
            app:layout_constraintTop_toTopOf="@id/backup_bn"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/progressTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/backup_ing"
            app:layout_constraintBottom_toBottomOf="@id/backup_bn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/backup_title"
            app:layout_constraintTop_toBottomOf="@id/progressBar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>